# Eunomia

./: .clang-tidy  .gitignore  CLAUDE.md  Makefile  README.md  plan.md  pyproject.toml
consoles/provisioning/: README.md  pyproject.toml
consoles/provisioning/src/eunomia_consoles_provisioning/: __init__.py  app.py  camera.py  config_pull.py  fob.py  provision.py  roster.py  ship_gate.py  site.py  supervisor.py  tether.py
consoles/provisioning/src/eunomia_consoles_provisioning/admin/: queries.py  router.py
consoles/provisioning/src/eunomia_consoles_provisioning/ops/: db.py  import_router.py  infra_queries.py  infra_router.py  inspect_queries.py  inspect_router.py  queries.py  review_queries.py  review_router.py  router.py
consoles/provisioning/src/eunomia_consoles_provisioning/templates/: base.html  index.html  provision.html  roster.html  ship_gate.html  supervisor_operators.html  supervisor_progress.html  supervisor_sheet.html  supervisor_tasks.html
consoles/provisioning/tests/: test_admin_routes.py  test_app.py  test_camera.py  test_config_pull.py  test_fob.py  test_import_routes.py  test_infra_queries.py  test_infra_routes.py  test_inspect_queries.py  test_inspect_routes.py  test_ops_queries.py  test_ops_routes.py  test_provision.py  test_review_queries.py  test_review_routes.py  test_ship_gate.py  test_site.py  test_supervisor.py  test_tether.py
contracts/: README.md  pyproject.toml
contracts/_generated/cpp/: eunomia_capture_device_port.h  eunomia_coordinator_port.h  eunomia_detail.h  eunomia_ping.h  eunomia_sidecar.h  eunomia_telemetry_event.h
contracts/_generated/jsonschema/: eunomia-calibration.schema.json  eunomia-capture-stack.schema.json  eunomia-episode.schema.json  eunomia-footage-reference.schema.json  eunomia-hardware-unit.schema.json  eunomia-kit.schema.json  eunomia-operational-event.schema.json  eunomia-person.schema.json  eunomia-release.schema.json  eunomia-session.schema.json  eunomia-sidecar.schema.json  eunomia-station.schema.json  eunomia-sync-delta.schema.json  eunomia-task-station-assignment.schema.json  eunomia-task.schema.json  eunomia-telemetry-event.schema.json  ping.schema.json
contracts/_generated/python/eunomia_contracts/: __init__.py  _semantics.py  calibration.py  capture_stack.py  episode.py  footage_reference.py  hardware_unit.py  interfaces.py  kit.py  operational_event.py  person.py  ping.py  release.py  session.py  sidecar.py  station.py  sync_delta.py  task.py  task_station_assignment.py  telemetry_event.py
contracts/_proof/: ping.schema.yaml
contracts/codegen/: README.md  generate.py  generate_interfaces.py  requirements.txt
contracts/codegen/templates/: detail.h.tmpl  header.h.tmpl  module.py.tmpl  port.h.tmpl  protocol.py.tmpl  semantics.py.tmpl
contracts/conformance/: test_conformance.py  test_ping_conformance.py
contracts/conformance/fixtures/calibration/invalid/: bad_scope.json
contracts/conformance/fixtures/calibration/valid/: full.json
contracts/conformance/fixtures/calibration/warn/: minimal_hard_only.json
contracts/conformance/fixtures/capture_stack/invalid/: missing_capture_stack_id.json
contracts/conformance/fixtures/capture_stack/valid/: full.json
contracts/conformance/fixtures/capture_stack/warn/: minimal_hard_only.json
contracts/conformance/fixtures/episode/invalid/: bad_side.json  missing_episode_id.json
contracts/conformance/fixtures/episode/semantic_invalid/: void_missing_reason.json  void_without_reason.json
contracts/conformance/fixtures/episode/valid/: full.json
contracts/conformance/fixtures/episode/warn/: minimal_hard_only.json
contracts/conformance/fixtures/kit/valid/: full.json
contracts/events/: README.md  eunomia-operational-event.schema.yaml  eunomia-sync-delta.schema.yaml  eunomia-telemetry-event.schema.yaml
contracts/interfaces/: README.md  ports.iface.yaml
contracts/operational/: README.md  eunomia-calibration.schema.yaml  eunomia-capture-stack.schema.yaml  eunomia-episode.schema.yaml  eunomia-footage-reference.schema.yaml  eunomia-hardware-unit.schema.yaml  eunomia-kit.schema.yaml  eunomia-person.schema.yaml  eunomia-session.schema.yaml  eunomia-station.schema.yaml  eunomia-task-station-assignment.schema.yaml  eunomia-task.schema.yaml
contracts/release/: README.md  eunomia-release.schema.yaml
contracts/sidecar/: README.md  eunomia-sidecar.schema.yaml
edge/store/: README.md  alembic.ini  pyproject.toml
edge/store/fixtures/: fleet.synthetic.json
edge/store/migrations/: env.py
edge/store/migrations/versions/: rev_0001_initial.py  rev_0002_episode_recorded_at_index.py  rev_0003_supervisor_tables.py  rev_0004_task_metadata.py  rev_0005_sidecar_raw.py  rev_0006_catalog_tables.py
edge/store/src/eunomia_edge_store/: __init__.py  allocator.py  config.py  contract_tables.py  engine.py  importer.py  resolvers.py  schema.py  store.py  timestamps.py
edge/store/tests/: conftest.py  test_catalog_tables.py  test_contract_coverage.py  test_db_security.py  test_db_store.py  test_pure_logic.py  test_supervisor_tables.py
ingest/: README.md  pyproject.toml
ingest/identity/: README.md
ingest/join/: README.md
ingest/orchestrator/: README.md
ingest/qc/: README.md
ingest/release/: README.md
ingest/src/eunomia_ingest/: cli.py  events.py  fob_log.py  ingest.py  sidecar.py
ingest/tests/: test_events.py  test_fob_log.py  test_ingest.py  test_sidecar.py
ingest/tests/fixtures/: fob_dump.jsonl
normalize/: pyproject.toml
normalize/src/eunomia_normalize/: __main__.py  cli.py  convert.py  discover.py  events.py
normalize/src/eunomia_normalize/config/: camera_intrinsics.json
normalize/tests/: test_cli.py  test_convert.py  test_discover.py
qc/: pyproject.toml
qc/src/eunomia_qc/: cli.py  engine.py  events.py  frames.py  grader.py  rubric.py  vlm.py
qc/src/eunomia_qc/checks/: duration.py  goal.py  scene.py  stream.py  task_rubric.py
qc/tests/: test_duration.py  test_engine.py  test_grader.py  test_rubric.py  test_stream.py  test_vlm.py
tooling/bench-harness/: README.md  pyproject.toml
tooling/bench-harness/src/eunomia_bench_harness/: __init__.py
(+226 files in other folders)
