[project]
name = "eunomia"
version = "0.0.0"
description = "Eunomia monorepo — thin root meta-package. Real code lives in the workspace members."
requires-python = ">=3.12"
# No runtime deps: codegen's PyYAML lives in the pinned `codegen` group (below), and the shipped
# `eunomia_contracts` validator stays pure-stdlib (CONTRACT §6). `jsonschema` is dev/CI-only.
dependencies = []

[tool.uv.workspace]
members = ["contracts", "tooling/bench-harness"]

[dependency-groups]
# Mirrors Hermes exactly — these exact version bounds. Gates run on tool DEFAULTS:
# there is intentionally NO [tool.ruff] and NO [tool.mypy] section anywhere.
# `jsonschema` (Run 0b, OQ-1): the dev/CI HYBRID conformance validator's structural layer — the
# real Draft 2020-12 library, NOT shipped to the field (the sidecar/edge validator is pure-stdlib).
# `types-jsonschema` keeps `mypy .` clean over the conformance test.
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.10,<0.20",
    "mypy>=1.10,<2.0",
    "import-linter>=2.0,<3.0",
    "jsonschema>=4.0,<5.0",
    "types-jsonschema>=4.0,<5.0",
]

# Hermetic codegen (Run 0b, BUILD_PLAN carry-forward #1): PyYAML is pinned in
# `contracts/codegen/requirements.txt`, NOT a [dependency-groups] group. Reason (OQ-6): codegen must
# run `--no-project` (it produces the tree that IS the `eunomia-contracts` package, so it must run
# before uv can build/sync that package), and `uv run --no-project` ignores [dependency-groups].
# So `make codegen` uses `--no-project --with-requirements contracts/codegen/requirements.txt` — the
# pinned, hermetic codegen dep manifest. The shipped validator never gains a third-party dep.

[tool.pytest.ini_options]
python_files = ["test_*.py"]
addopts = "-ra -q"
# Hermes's ["tests", "packages"] adapted to Eunomia's top-level module layout (no
# packages/ parent dir). Grows as Python members are added (ingest/, edge/, ...).
testpaths = ["contracts", "tooling"]

[tool.importlinter]
# The dependency law: everything depends only on contracts/. Mirrors the Hermes
# import-linter pattern (config in pyproject.toml; root_packages = every import name).
root_packages = ["eunomia_contracts", "eunomia_bench_harness"]

[[tool.importlinter.contracts]]
name = "contracts spine imports nothing internal"
type = "forbidden"
source_modules = ["eunomia_contracts"]
# eunomia_contracts is THE SPINE (like hermes_schema): it imports no other eunomia
# package. Extend forbidden_modules / add independence contracts as members land.
forbidden_modules = ["eunomia_bench_harness"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Thin meta-package: no modules of its own.
bypass-selection = true
