[project]
name = "eunomia"
version = "0.0.0"
description = "Eunomia monorepo — thin root meta-package. Real code lives in the workspace members."
requires-python = ">=3.12"
# No runtime deps: codegen's PyYAML lives in the pinned `codegen` group (below), and the shipped
# `eunomia_contracts` validator stays pure-stdlib (CONTRACT §6). `jsonschema` is dev/CI-only.
dependencies = []

[tool.uv.workspace]
members = ["contracts", "tooling/bench-harness", "edge/store", "consoles/provisioning", "ingest", "qc", "normalize"]

[dependency-groups]
# Mirrors Hermes exactly — these exact version bounds. Gates run on tool DEFAULTS:
# there is intentionally NO [tool.ruff] and NO [tool.mypy] section anywhere.
# `jsonschema` (Run 0b, OQ-1): the dev/CI HYBRID conformance validator's structural layer — the
# real Draft 2020-12 library, NOT shipped to the field (the sidecar/edge validator is pure-stdlib).
# `types-jsonschema` keeps `mypy .` clean over the conformance test.
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.10,<0.20",
    "mypy>=1.10,<2.0",
    "import-linter>=2.0,<3.0",
    "jsonschema>=4.0,<5.0",
    "types-jsonschema>=4.0,<5.0",
    "httpx2>=0.1",
]

# Hermetic codegen (Run 0b, BUILD_PLAN carry-forward #1): PyYAML is pinned in
# `contracts/codegen/requirements.txt`, NOT a [dependency-groups] group. Reason (OQ-6): codegen must
# run `--no-project` (it produces the tree that IS the `eunomia-contracts` package, so it must run
# before uv can build/sync that package), and `uv run --no-project` ignores [dependency-groups].
# So `make codegen` uses `--no-project --with-requirements contracts/codegen/requirements.txt` — the
# pinned, hermetic codegen dep manifest. The shipped validator never gains a third-party dep.

[tool.pytest.ini_options]
python_files = ["test_*.py"]
addopts = "-ra -q"
# Hermes's ["tests", "packages"] adapted to Eunomia's top-level module layout (no
# packages/ parent dir). Grows as Python members are added (ingest/, edge/, ...).
testpaths = ["contracts", "tooling", "edge/store", "edge/sync", "consoles/provisioning", "ingest", "qc", "normalize"]
markers = [
    # DB-backed store tests (Run S1). They skip when EUNOMIA_STORE_TEST_DSN is unset, so the default
    # `make gates` needs no database; `make gates-db` sets the DSN + selects them with `-m db`.
    "db: requires a live Postgres (EUNOMIA_STORE_TEST_DSN); run via `make gates-db`",
]

[tool.importlinter]
# The dependency law: everything depends only on contracts/. Mirrors the Hermes
# import-linter pattern (config in pyproject.toml; root_packages = every import name).
root_packages = ["eunomia_contracts", "eunomia_bench_harness", "eunomia_edge_store", "eunomia_consoles_provisioning", "eunomia_ingest", "eunomia_qc", "eunomia_normalize"]

[[tool.importlinter.contracts]]
name = "contracts spine imports nothing internal"
type = "forbidden"
source_modules = ["eunomia_contracts"]
# eunomia_contracts is THE SPINE (like hermes_schema): it imports no other eunomia
# package. Extend forbidden_modules / add independence contracts as members land.
forbidden_modules = ["eunomia_bench_harness", "eunomia_edge_store", "eunomia_ingest", "eunomia_qc", "eunomia_normalize"]

[[tool.importlinter.contracts]]
name = "edge/store depends only on contracts"
type = "forbidden"
source_modules = ["eunomia_edge_store"]
# The store (Run S1) reads the contract spine and nothing else internal (the dependency law).
forbidden_modules = ["eunomia_bench_harness", "eunomia_ingest", "eunomia_qc", "eunomia_normalize"]

[[tool.importlinter.contracts]]
name = "consoles/provisioning depends only on contracts + edge/store + ingest + qc"
type = "forbidden"
source_modules = ["eunomia_consoles_provisioning"]
forbidden_modules = ["eunomia_bench_harness", "eunomia_normalize"]

[[tool.importlinter.contracts]]
name = "ingest depends only on contracts + edge/store"
type = "forbidden"
source_modules = ["eunomia_ingest"]
forbidden_modules = ["eunomia_bench_harness", "eunomia_consoles_provisioning", "eunomia_qc", "eunomia_normalize"]

[[tool.importlinter.contracts]]
name = "qc depends only on contracts + edge/store"
type = "forbidden"
source_modules = ["eunomia_qc"]
forbidden_modules = ["eunomia_bench_harness", "eunomia_ingest", "eunomia_consoles_provisioning", "eunomia_normalize"]

[[tool.importlinter.contracts]]
name = "normalize depends only on contracts + edge/store"
type = "forbidden"
source_modules = ["eunomia_normalize"]
forbidden_modules = ["eunomia_bench_harness", "eunomia_ingest", "eunomia_qc", "eunomia_consoles_provisioning"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Thin meta-package: no modules of its own.
bypass-selection = true
