[project]
name = "eunomia-contracts"
version = "0.0.0"
description = "Eunomia contract spine — generated types + pure-stdlib validator. Imports nothing internal."
requires-python = ">=3.12"
# Pure-stdlib: the shipped validator runs cam-side / in ingest with no third-party deps
# (CONTRACT §6). Codegen's PyYAML is supplied ephemerally, not declared here.
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The importable package is the GENERATED tree (committed, drift-gated).
packages = ["_generated/python/eunomia_contracts"]
