[project]
name = "eunomia-ingest"
version = "0.0.0"
description = "Eunomia ingest pipeline — camera sidecar + fob log → S1 store (Run I1). Depends only on contracts + edge/store."
requires-python = ">=3.12"
dependencies = [
    "eunomia-contracts",
    "eunomia-edge-store",
]

[project.scripts]
eunomia-ingest = "eunomia_ingest.cli:main"

[tool.uv.sources]
eunomia-contracts = { workspace = true }
eunomia-edge-store = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eunomia_ingest"]
