[project]
name = "eunomia-normalize"
version = "0.0.0"
description = "Eunomia video normalization — Insta360 X3 SBS fisheye → flat perspective MP4 (Run NORM1). Depends only on contracts + edge/store."
requires-python = ">=3.12"
dependencies = [
    "eunomia-contracts",
    "eunomia-edge-store",
    "opencv-python-headless>=4.8,<5.0",
    "numpy>=1.26,<3.0",
]

[project.scripts]
eunomia-normalize = "eunomia_normalize.cli:main"

[tool.uv.sources]
eunomia-contracts = { workspace = true }
eunomia-edge-store = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eunomia_normalize"]
