[project]
name = "eunomia-qc"
version = "0.0.0"
description = "Eunomia rubric-based QC engine — universal MVO + per-task checks → Accept/Review/Reject (Run QC1). Depends only on contracts + edge/store."
requires-python = ">=3.12"
dependencies = [
    "eunomia-contracts",
    "eunomia-edge-store",
    "httpx>=0.27,<1.0",
]

[project.scripts]
eunomia-qc = "eunomia_qc.cli:main"

[tool.uv.sources]
eunomia-contracts = { workspace = true }
eunomia-edge-store = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eunomia_qc"]
