[project]
name = "eunomia-bench-harness"
version = "0.0.0"
description = "Eunomia bench harness — runs the gates against a rig (Run 0a shell; depends only on contracts)."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eunomia_bench_harness"]
